[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/scenes/ModPanel.gd" type="Script" id=2]
[ext_resource path="res://assets/images/gui/panels/1,1.png" type="Texture" id=3]
[ext_resource path="res://src/scenes/RichTextButton.gd" type="Script" id=4]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 500, 500 )

[node name="Control" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -659.0
margin_bottom = -277.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1236.0
margin_bottom = 778.0

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 530.0
margin_bottom = 753.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/PanelContainer2"]
margin_right = 530.0
margin_bottom = 753.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer2/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 500.0
margin_bottom = 723.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
margin_right = 470.0
margin_bottom = 35.0
text = "MODLOAD"

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 470.0
margin_bottom = 74.0
text = "MODLOAD1"
autowrap = true

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 470.0
margin_bottom = 693.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )

[node name="lModsContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 470.0
margin_bottom = 615.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/ScrollContainer/lModsContainer"]
visible = false
margin_right = 501.0
margin_bottom = 49.2509
toggle_mode = true
script = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/ScrollContainer/lModsContainer/Button"]
margin_left = 10.1022
margin_top = 4.48985
margin_right = 497.102
margin_bottom = 44.4899
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 534.0
margin_right = 676.0
margin_bottom = 753.0
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 142.0
margin_bottom = 189.251
text = "<"

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 193.0
margin_right = 142.0
margin_bottom = 242.251
text = ">"

[node name="Button3" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 246.0
margin_right = 142.0
margin_bottom = 295.251
text = "MODUP"

[node name="Button4" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 299.0
margin_right = 142.0
margin_bottom = 348.251
text = "MODDOWN"

[node name="Button5" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 352.0
margin_right = 142.0
margin_bottom = 401.251
text = "MODOK"

[node name="Button6" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 405.0
margin_right = 142.838
margin_bottom = 454.251
text = "MODCLOSE"

[node name="Button7" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 458.0
margin_right = 142.0
margin_bottom = 507.251
text = "<<"

[node name="Button8" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 511.0
margin_right = 142.0
margin_bottom = 560.251
text = ">>"

[node name="Button9" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 564.0
margin_right = 142.0
margin_bottom = 613.251
text = "MODSORT"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 680.0
margin_right = 1211.0
margin_bottom = 753.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/PanelContainer"]
margin_right = 531.0
margin_bottom = 753.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 501.0
margin_bottom = 723.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 471.0
margin_bottom = 35.0
text = "MODLIST"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 471.0
margin_bottom = 693.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
scroll_horizontal_enabled = false

[node name="avModsContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 471.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/avModsContainer"]
visible = false
margin_right = 502.0
margin_bottom = 49.2509
toggle_mode = true
script = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/avModsContainer/Button"]
margin_left = 6.73486
margin_top = 4.48985
margin_right = 493.735
margin_bottom = 44.4899
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_left = 261.39
margin_top = 204.0
margin_right = 1020.39
margin_bottom = 356.0
window_title = "Restart game"
dialog_text = "Changes saved. 
Restart game to reload content of selected mods."

[node name="Button" type="Button" parent="."]
margin_left = 434.506
margin_top = 810.104
margin_right = 830.506
margin_bottom = 878.104
text = "MODOPENEDITOR"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button" to="." method="add_mod"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button2" to="." method="remove_mod"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button3" to="." method="m_up"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button4" to="." method="m_down"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button5" to="." method="on_ok"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button6" to="." method="on_cancel"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button7" to="." method="on_loadall_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button8" to="." method="on_unloadall_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button9" to="." method="on_sort_pressed"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
